feat: Add RAGAS validation to API and use in notebook

--- a/investigator_ai_ragas_evaluation.ipynb
+++ b/investigator_ai_ragas_evaluation.ipynb
@@ -2040,7 +2040,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -2101,9 +2101,13 @@
         "    print(\"📊 Evaluating Tool Call Accuracy...\")\n",
         "    \n",
         "    try:\n",
-        "        # Get dictionary messages from API (now properly formatted with tool calls!)\n",
-        "        dict_messages = agent_results[0][\"messages\"]\n",
-        "        print(f\"🔍 Got {len(dict_messages)} dictionary messages from API\")\n",
+        "        # Get RAGAS-validated messages from API (pre-filtered and validated!)\n",
+        "        if \"ragas_validated_messages\" in api_result:\n",
+        "            dict_messages = api_result[\"ragas_validated_messages\"]\n",
+        "            print(f\"🎯 Got {len(dict_messages)} RAGAS-validated messages from API\")\n",
+        "        else:\n",
+        "            dict_messages = agent_results[0][\"messages\"]\n",
+        "            print(f\"🔍 Got {len(dict_messages)} dictionary messages from API (fallback)\")\n",
         "        \n",
         "        # Convert to LangChain messages first\n",
         "        langchain_messages = [to_lc_message(msg) for msg in dict_messages]\n",
@@ -2618,8 +2622,12 @@
         "    print(\"📊 Evaluating Agent Goal Accuracy...\")\n",
         "    \n",
         "    try:\n",
-        "        # Get dictionary messages and convert to LangChain objects first\n",
-        "        dict_messages = agent_results[0][\"messages\"]\n",
+        "        # Use the same RAGAS-validated messages from API\n",
+        "        if \"ragas_validated_messages\" in api_result:\n",
+        "            dict_messages = api_result[\"ragas_validated_messages\"]\n",
+        "        else:\n",
+        "            dict_messages = agent_results[0][\"messages\"]\n",
+        "        \n",
         "        langchain_messages = [to_lc_message(msg) for msg in dict_messages]\n",
         "        \n",
         "        # ✨ CONVERT TO RAGAS MESSAGE OBJECTS\n",
@@ -2681,8 +2689,12 @@
         "    print(\"📊 Evaluating Topic Adherence...\")\n",
         "    \n",
         "    try:\n",
-        "        # Get dictionary messages and convert to LangChain objects first\n",
-        "        dict_messages = agent_results[0][\"messages\"]\n",
+        "        # Use the same RAGAS-validated messages from API\n",
+        "        if \"ragas_validated_messages\" in api_result:\n",
+        "            dict_messages = api_result[\"ragas_validated_messages\"]\n",
+        "        else:\n",
+        "            dict_messages = agent_results[0][\"messages\"]\n",
+        "        \n",
         "        langchain_messages = [to_lc_message(msg) for msg in dict_messages]\n",
         "        \n",
         "        # ✨ CONVERT TO RAGAS MESSAGE OBJECTS\n",
